# noir-bignum-paramgen

./: Cargo.toml  README.md  a.txt  out.txt
fields/: U1024.nr  U2048.nr  U256.nr  U384.nr  U4096.nr  U512.nr  U768.nr  U8192.nr  bls12_377Fq.nr  bls12_377Fr.nr  bls12_381Fq.nr  bls12_381Fr.nr  bn254Fq.nr  ed25519Fq.nr  ed25519Fr.nr  mnt4_753Fq.nr  mnt4_753Fr.nr  mnt6_753Fq.nr  mnt6_753Fr.nr  pallasFq.nr  pallasFr.nr  secp256k1Fq.nr  secp256k1Fr.nr  secp256r1Fq.nr  secp256r1Fr.nr  secp384r1Fq.nr  secp384r1Fr.nr  vestaFq.nr  vestaFr.nr
src/: lib.rs  main.rs
