[package]
name = "noir-bignum-paramgen"
version = "0.1.0"
edition = "2021"

[dependencies]
itoa = { version = "1.0.11" }
hex = { version = "0.4" }
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }
num-integer = { version = "0.1.39", default-features = false }
