[package]
name = "noir-bignum-paramgen"
description = "command line tool to convert a modulus into bignum instance parameters for https://github.com/noir-lang/noir-bignum"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noir-lang/noir-bignum-paramgen"

[lib]
name = "noir_bignum_paramgen"
path = "src/lib.rs"

[[bin]]
name = "paramgen"
path = "src/main.rs"

[dependencies]
itoa = { version = "1.0.11" }
hex = { version = "0.4" }
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }
num-integer = { version = "0.1.39", default-features = false }
num-prime = "0.4.3"
rand = "0.8.5"